tree-sitter-plotnik/test/corpus/strings.txt
================================================================================
Double and single quoted
================================================================================
Q = (return_statement "return" 'return')
--------------------------------------------------------------------------------

(source_file
  (definition
    (type_identifier)
    (named_node
      (identifier)
      (string
        (string_content))
      (string
        (string_content)))))

================================================================================
Escapes
================================================================================
Q = (p "a\"b\\c" '\'')
--------------------------------------------------------------------------------

(source_file
  (definition
    (type_identifier)
    (named_node
      (identifier)
      (string
        (string_content))
      (string
        (string_content)))))

================================================================================
Empty strings
================================================================================
Q = (p "" '')
--------------------------------------------------------------------------------

(source_file
  (definition
    (type_identifier)
    (named_node
      (identifier)
      (string)
      (string))))

================================================================================
Comment lookalikes inside strings
================================================================================
Q = (p ";" "//x" "/*y*/")
--------------------------------------------------------------------------------

(source_file
  (definition
    (type_identifier)
    (named_node
      (identifier)
      (string
        (string_content))
      (string
        (string_content))
      (string
        (string_content)))))

================================================================================
String content spanning a newline
================================================================================
Q = (p "a
b")
--------------------------------------------------------------------------------

(source_file
  (definition
    (type_identifier)
    (named_node
      (identifier)
      (string
        (string_content)))))

================================================================================
Captured anonymous node
================================================================================
Q = (binary_expression "+" @op)
--------------------------------------------------------------------------------

(source_file
  (definition
    (type_identifier)
    (named_node
      (identifier)
      (captured_pattern
        (string
          (string_content))
        (capture)))))
